harness/test/errors/074_where_keyword.eu
# Mistake: using Haskell-style 'where' clause — not valid in eucalypt
result: x + y
  where
    x: 1
    y: 2
